# SortWarrior

./: README.md
main_unit_raspberrypi/cpp_test/: CMakeLists.txt  CMakePresets.json
main_unit_raspberrypi/cpp_test/.cache/clangd/index/: main.cpp.592B4C738321EF43.idx
main_unit_raspberrypi/cpp_test/lib/vision/inc/: detect.hpp
main_unit_raspberrypi/cpp_test/lib/vision/src/: detect.cpp
main_unit_raspberrypi/cpp_test/src/: main.cpp
main_unit_raspberrypi/lib/vision/: img_process.py
sorter_unit_stm32f103c8t6/: .mxproject  CMakeLists.txt  sorter_unit_stm32f103c8t6.ioc
sorter_unit_stm32f103c8t6/Core/Inc/: stm32f1xx_it.h
sorter_unit_stm32f103c8t6/Core/Src/: gpio.c  i2c.c  main.c  stm32f1xx_it.c
sorter_unit_stm32f103c8t6/Drivers/tcs3472/Inc/: tcs3472.h
sorter_unit_stm32f103c8t6/Drivers/tcs3472/Src/: tcs3472.c
